[package]
name = "linear-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cynic = { version = "3.7.3", features = ["http-reqwest"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
url = "2.5.2"

[build-dependencies]
cynic-codegen = "3.7.3"
