[package]
name = "linearly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linear"
path = "./src/main.rs"

[dependencies]
linear-api = { path = "../api" }

anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["env", "derive"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "time", "macros", "fs"] }
cynic = { version = "3.7.3", features = ["http-reqwest"] }
comfy-table = "7.1.1"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
colored = "2.1.0"
